# Args-CleanCode

./: .gitignore  Args.sln  ArgsTest.cpp  CMakeLists.txt  README.md
Args/: Args.common.settings  Args.cpp  Args.h  Args.vcxproj  ReadMe.txt  UnitTest.cpp  args.cpp  args.h  args_exception.h  args_test.cpp  argument_marshaler.h  main.cpp  stdafx.cpp  unit_test.cpp
Args/fmt/: fmt_all.h  format.h  ostream.cc  printf.cpp
googletest/msvc/gtest/: gtest.lib
googletest/msvc/gtest-md/: gtest.lib
include/: args.h  args_exception.h  argument_marshaler.h
lib/: CMakeLists.txt  args.cpp
src/: CMakeLists.txt  args.h  main.cpp  stdafx.cpp  unit_test.cpp
test/: ArgsTest.cpp  CMakeLists.txt  args_test.cpp  main.cpp
